hero section logo position overlapping fixed XD!!!

--- a/index.css
+++ b/index.css
@@ -406,19 +406,11 @@ header .btn {
 }
 
   .translate{
-    /* transform: translateX(-5.1rem); */
-  /* position: static; 
-  margin: auto; */
-  /* opacity: 0; */
+ 
+  opacity: 0;
   display: none !important;
 }
-.translateReverse{
-  /* transform: translateX(5.1rem); */
-  /* opacity: 1; */
-  display: block !important;
-
-
-}
+ 
 @media screen and (max-width: 768px) {
   .hero_stats-wrapper {
     padding: 0 9px;
